# MultiModel

./: .gitignore  .mypy.ini  MAC_M_SERIES_GUIDE.md  README.md  environment.yml  install_mac_m.sh  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  setup_conda_env.bat  setup_conda_env.sh  多模态机器学习教程.ipynb
.github/: copilot-instructions.md
examples/: demo.py
multimodel/: __init__.py  cli.py
multimodel/core/: __init__.py  audio_processor.py  image_processor.py  multimodal_fusion.py  text_processor.py
sample_data/: sample_texts.txt
tests/: test_basic.py
